--- a/GameShop/Views/Games/Index.cshtml
+++ b/GameShop/Views/Games/Index.cshtml
@@ -24,7 +24,11 @@
                                     @item.Name
                                     @if (User.Identity.IsAuthenticated)
                                     {
-                                        <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                                        <div>
+                                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                        </div>
+                                        
                                     }
                                 </h5>
                             </p>
